# Ass3

Client/: CMakeLists.txt
Client/Boost_Echo_Client/include/: connectionHandler.h  keyboardThreadTask.h  socketTreadTask.h
Client/Boost_Echo_Client/src/: connectionHandler.cpp  keyboardThreadTask.cpp  main.cpp  socketTreadTask.cpp
Client/include/: keyboardThreadTask.h  socketTreadTask.h
Client/src/: BGSclient.cpp  encoderDecoder.cpp  socketTreadTask.cpp
Server/src/main/java/bgu/spl/net/api/bidi/: Message.java
Server/src/main/java/bgu/spl/net/impl/: BidiMessagingProtocolImpl.java  ConnectionsImp.java
Server/src/main/java/bgu/spl/net/impl/msg/: ErrorMsg.java  FollowMsg.java  LoginMsg.java  LogstatMsg.java  PMMsg.java  PostMsg.java
Server/src/main/java/bgu/spl/net/srv/: BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  TPCMain.java
Server/src/main/java/bgu/spl/net/srv/BGS/: BgsDB.java  FilteredWords.java  User.java  post.java
spl-net/src/main/java/bgu/spl/net/impl/: BidiMessagingProtocolImpl.java  ConnectionsImp.java  MessageEncoderDecoder.java
spl-net/src/main/java/bgu/spl/net/impl/msg/: ACKMsg.java  BlockMsg.java  FollowMsg.java  LogStatInfo.java  LoginMsg.java  LogoutMsg.java  LogstatMsg.java  NotificationMsg.java  PMMsg.java  PostMsg.java  RegisterMsg.java  StatMsg.java
spl-net/src/main/java/bgu/spl/net/srv/: BaseServer.java  BgsDB.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  ReactorMain.java  Server.java  ServerTPC.java  TPCMain.java  User.java
(+20 files in other folders)
